# minhasaopauloverde

./: .dockerignore  .gitignore  Dockerfile  PLAN.md  README.md  flake.nix  railway.toml
backend/: pyproject.toml
backend/src/treecheck_api/: __init__.py  data_repository.py  main.py  sample_data.py  spatial.py
backend/tests/: test_geosampa_import.py  test_score.py  test_spatial.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx  styles.css
frontend/app/metodologia/: page.tsx
tools/: fetch_osm_green_areas.py  fetch_osm_tree_layers.py  geosampa_import.py  import_geosampa_canopy.py  import_geosampa_green_areas.py  import_geosampa_trees.py
